--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,114 @@
-# Local .terraform directories
-.terraform/
+# =========================
+# OS / Editor junk
+# =========================
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Icon?
+*.swp
+*.swo
+*~
+.vscode/
+.idea/
+*.log
 
-# .tfstate files
+# =========================
+# Python / Scripts
+# =========================
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pytest_cache/
+
+# =========================
+# Terraform
+# =========================
 *.tfstate
 *.tfstate.*
-
-# Crash log files
+.terraform/
+.terraform.lock.hcl
 crash.log
-crash.*.log
-
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
-
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
-
-# Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock.info
-
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
-
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
-
-# Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# =========================
+# Helm
+# =========================
+*.tgz
+charts/*
+!charts/.gitkeep
+helmfile.d/
+
+# =========================
+# Kubernetes / Kubeconfig
+# =========================
+.kube/
+*.kubeconfig
+kubeconfig.yaml
+
+# =========================
+# Secrets (DON’T COMMIT REAL SECRETS)
+# =========================
+*.secret.yaml
+*secret*.yaml
+*.secrets/
+*.key
+*.crt
+*.pem
+*.p12
+*.jks
+*.env
+.envrc
+.env.*
+
+# =========================
+# Docker
+# =========================
+.docker/
+docker-compose.override.yml
+docker-compose.override.yaml
+
+# =========================
+# Backup / tmp files
+# =========================
+*.bak
+*.tmp
+*.temp
+*.out
+*.err
+*.pid
+*.lock
+
+# =========================
+# Node / Frontend (if used)
+# =========================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+dist/
+build/
+
+# =========================
+# Go (if backend uses Go)
+# =========================
+bin/
+vendor/
+*.test
+
+# =========================
+# Misc
+# =========================
+*.iml
+*.class
+*.o
+*.so
+*.dll
+*.exe
+
