--- a/applications/backend/templates/deployment-service.yaml
+++ b/applications/backend/templates/deployment-service.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Release.Name }}-backend
+  labels: {{- toYaml .Values.labels | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -13,16 +14,36 @@ spec:
         app: {{ .Release.Name }}-backend
     spec:
       containers:
-        - name: backend
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          ports:
-            - containerPort: {{ .Values.service.port }}
+          - name: backend
+            image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+            imagePullPolicy: {{ .Values.image.pullPolicy }}
+            ports:
+              - containerPort: {{ .Values.service.port }}
+            resources: {{- toYaml .Values.resources | nindent 12 }}
+            securityContext: {{- toYaml .Values.securityContext | nindent 12 }}
+            livenessProbe:
+              httpGet:
+                path: {{ .Values.probes.liveness.path }}
+                port: {{ .Values.service.port }}
+              initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
+              periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
+              timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
+              failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
+            readinessProbe:
+              httpGet:
+                path: {{ .Values.probes.readiness.path }}
+                port: {{ .Values.service.port }}
+              initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }}
+              periodSeconds: {{ .Values.probes.readiness.periodSeconds }}
+              timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }}
+              failureThreshold: {{ .Values.probes.readiness.failureThreshold }}
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Release.Name }}-backend
+  labels: {{- toYaml .Values.labels | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   selector:
