--- a/applications/backend/values-dev.yaml
+++ b/applications/backend/values-dev.yaml
@@ -1,15 +1,22 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/dummy/backend
-  tag: "latest"
+  repository: hashicorp/http-echo
+  tag: "0.2.3"
 
 service:
-  type: ClusterIP
-  port: 8080
+  port: 8081
+
+resources:
+  requests:
+    cpu: 50m
+    memory: 64Mi
+  limits:
+    cpu: 200m
+    memory: 256Mi
 
 hpa:
-  enabled: false
+  enabled: true
   minReplicas: 1
-  maxReplicas: 1
-  cpuUtilization: 80
+  maxReplicas: 3
+  cpuUtilization: 60
