--- a/applications/backend/values-prod.yaml
+++ b/applications/backend/values-prod.yaml
@@ -1,15 +1,23 @@
-replicaCount: 2
+replicaCount: 3
 
 image:
-  repository: ghcr.io/dummy/backend
-  tag: "latest"
+  repository: hashicorp/http-echo
+  tag: "0.2.3"
 
 service:
-  type: ClusterIP
   port: 8080
+
+resources:
+  requests:
+    cpu: 200m
+    memory: 256Mi
+  limits:
+    cpu: 1
+    memory: 1Gi
 
 hpa:
   enabled: true
-  minReplicas: 2
-  maxReplicas: 5
-  cpuUtilization: 60
+  minReplicas: 3
+  maxReplicas: 10
+  cpuUtilization: 70
+  memoryUtilization: 80
