--- a/applications/frontend/templates/hpa.yaml
+++ b/applications/frontend/templates/hpa.yaml
@@ -2,7 +2,8 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ .Release.Name }}-frontend
+  name: {{ .Release.Name }}-frontend-hpa
+  labels: {{- toYaml .Values.labels | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -17,4 +18,12 @@ spec:
         target:
           type: Utilization
           averageUtilization: {{ .Values.hpa.cpuUtilization }}
+    {{- if .Values.hpa.memoryUtilization }}
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: {{ .Values.hpa.memoryUtilization }}
+    {{- end }}
   {{- end }}
