--- a/applications/frontend/values-dev.yaml
+++ b/applications/frontend/values-dev.yaml
@@ -5,11 +5,26 @@ image:
   tag: "1.29.1"
 
 service:
-  type: ClusterIP
-  port: 80
+  port: 3001
+
+ingress:
+  enabled: true
+  hosts:
+    - host: frontend-dev.local
+      paths:
+        - path: /
+          pathType: Prefix
+
+resources:
+  requests:
+    cpu: 50m
+    memory: 64Mi
+  limits:
+    cpu: 200m
+    memory: 256Mi
 
 hpa:
-  enabled: false
+  enabled: true
   minReplicas: 1
-  maxReplicas: 1
-  cpuUtilization: 80
+  maxReplicas: 3
+  cpuUtilization: 60
