--- a/applications/mysql/templates/pvc-backups.yaml
+++ b/applications/mysql/templates/pvc-backups.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-backup-pvc
+  name: mysql-backups
   labels:
     app.kubernetes.io/name: mysql
-    app.kubernetes.io/component: database
+    app.kubernetes.io/component: backup
     app.kubernetes.io/part-of: vyking-app
-    app.kubernetes.io/environment: {{ .Values.global.environment | default "dev" }}
+    app.kubernetes.io/environment: {{ .Values.commonLabels.environment | default "dev" }}
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 5Gi
