--- a/applications/backend/templates/deployment-service.yaml
+++ b/applications/backend/templates/deployment-service.yaml
@@ -2,7 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Release.Name }}-backend
-  labels: {{- toYaml .Values.labels | nindent 4 }}
+  labels:
+    app: {{ .Release.Name }}-backend
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -16,38 +17,25 @@ spec:
       containers:
           - name: backend
             image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-            imagePullPolicy: {{ .Values.image.pullPolicy }}
             ports:
               - containerPort: {{ .Values.service.port }}
-            resources: {{- toYaml .Values.resources | nindent 12 }}
-            securityContext: {{- toYaml .Values.securityContext | nindent 12 }}
-            livenessProbe:
-              httpGet:
-                path: {{ .Values.probes.liveness.path }}
-                port: {{ .Values.service.port }}
-              initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
-              periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
-              timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
-              failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
-            readinessProbe:
-              httpGet:
-                path: {{ .Values.probes.readiness.path }}
-                port: {{ .Values.service.port }}
-              initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }}
-              periodSeconds: {{ .Values.probes.readiness.periodSeconds }}
-              timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }}
-              failureThreshold: {{ .Values.probes.readiness.failureThreshold }}
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ .Release.Name }}-backend
-  labels: {{- toYaml .Values.labels | nindent 4 }}
-spec:
-  type: {{ .Values.service.type }}
-  selector:
-    app: {{ .Release.Name }}-backend
-  ports:
-      - port: {{ .Values.service.port }}
-        targetPort: {{ .Values.service.port }}
+            env:
+              - name: MYSQL_HOST
+                value: {{ .Values.mysql.host | quote }}
+              - name: MYSQL_PORT
+                value: {{ .Values.mysql.port | quote }}
+              - name: MYSQL_DATABASE
+                valueFrom:
+                  secretKeyRef:
+                    name: {{ .Values.mysql.secretName }}
+                    key: mysql-database
+              - name: MYSQL_USER
+                valueFrom:
+                  secretKeyRef:
+                    name: {{ .Values.mysql.secretName }}
+                    key: mysql-user
+              - name: MYSQL_PASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    name: {{ .Values.mysql.secretName }}
+                    key: mysql-password
