--- a/applications/backend/values-dev.yaml
+++ b/applications/backend/values-dev.yaml
@@ -1,22 +1,26 @@
 replicaCount: 1
 
 image:
-  repository: hashicorp/http-echo
-  tag: latest
+  repository: vyking-backend
+  tag: dev
+  pullPolicy: IfNotPresent
 
 service:
+  type: ClusterIP
   port: 8081
+
+mysql:
+  host: mysql-dev
+  port: 3306
+  secretName: mysql-dev-secret
 
 resources:
   requests:
-    cpu: 50m
-    memory: 64Mi
+    cpu: 100m
+    memory: 128Mi
   limits:
-    cpu: 200m
+    cpu: 300m
     memory: 256Mi
 
-hpa:
-  enabled: true
-  minReplicas: 1
-  maxReplicas: 3
-  cpuUtilization: 60
+autoscaling:
+  enabled: false
