--- a/applications/backend/values-prod.yaml
+++ b/applications/backend/values-prod.yaml
@@ -1,23 +1,29 @@
-replicaCount: 3
+replicaCount: 2
 
 image:
-  repository: hashicorp/http-echo
-  tag: latest
+  repository: vyking-backend
+  tag: prod
+  pullPolicy: IfNotPresent
 
 service:
-  port: 8080
+  type: ClusterIP
+  port: 8081
+
+mysql:
+  host: mysql-prod
+  port: 3306
+  secretName: mysql-prod-secret
 
 resources:
   requests:
     cpu: 200m
     memory: 256Mi
   limits:
-    cpu: 1
-    memory: 1Gi
+    cpu: 500m
+    memory: 512Mi
 
-hpa:
+autoscaling:
   enabled: true
-  minReplicas: 3
-  maxReplicas: 10
-  cpuUtilization: 70
-  memoryUtilization: 80
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 70
