--- a/applications/frontend/values-dev.yaml
+++ b/applications/frontend/values-dev.yaml
@@ -1,30 +1,27 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  tag: 1.27.2
+  repository: vyking-frontend
+  tag: dev
+  pullPolicy: IfNotPresent
 
 service:
-  port: 3001
+  type: ClusterIP
+  port: 8080
+
+backend:
+  host: backend-dev
+  port: 8081
 
 ingress:
   enabled: true
-  hosts:
-    - host: frontend-dev.local
-      paths:
-        - path: /
-          pathType: Prefix
+  host: frontend-dev.local
+  tls: true
 
 resources:
   requests:
-    cpu: 50m
-    memory: 64Mi
+    cpu: 100m
+    memory: 128Mi
   limits:
-    cpu: 200m
+    cpu: 300m
     memory: 256Mi
-
-hpa:
-  enabled: true
-  minReplicas: 1
-  maxReplicas: 3
-  cpuUtilization: 60
