--- a/applications/mysql/dev-values.yaml
+++ b/applications/mysql/dev-values.yaml
@@ -2,23 +2,29 @@ mysql:
   architecture: standalone
 
   auth:
-    existingSecret: mysql-auth
-    username: devuser
-    database: devdb
+    existingSecret: mysql-dev-secret
 
   primary:
     persistence:
       size: 1Gi
     service:
-      port: 3307   # dev port to avoid clash with prod
+      port: 3307   # dev port
 
-  resources:
-    requests:
-      cpu: 100m
-      memory: 128Mi
-    limits:
-      cpu: 500m
-      memory: 512Mi
+  initdbScripts:
+    init.sql: |
+      CREATE TABLE IF NOT EXISTS todos (
+        id INT AUTO_INCREMENT PRIMARY KEY,
+        task VARCHAR(255) NOT NULL
+      );
+
+resources:
+  requests:
+    cpu: 100m
+    memory: 128Mi
+  limits:
+    cpu: 500m
+    memory: 512Mi
 
 commonLabels:
   environment: dev
+  app: vyking-mysql
