--- a/applications/frontend/templates/deployment-service.yaml
+++ b/applications/frontend/templates/deployment-service.yaml
@@ -15,11 +15,33 @@ spec:
       containers:
           - name: frontend
             image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+            imagePullPolicy: {{ .Values.image.pullPolicy }}
             ports:
               - containerPort: {{ .Values.service.port }}
             env:
               - name: BACKEND_URL
                 value: "http://{{ .Values.backend.host }}:{{ .Values.backend.port }}"
+            livenessProbe:
+              httpGet:
+                path: {{ .Values.probes.liveness.path }}
+                port: {{ .Values.probes.liveness.port | default .Values.service.port }}
+              initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
+              periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
+              timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
+              failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
+            readinessProbe:
+              httpGet:
+                path: {{ .Values.probes.readiness.path }}
+                port: {{ .Values.probes.readiness.port | default .Values.service.port }}
+              initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }}
+              periodSeconds: {{ .Values.probes.readiness.periodSeconds }}
+              timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }}
+              failureThreshold: {{ .Values.probes.readiness.failureThreshold }}
+            resources:
+              {{- toYaml .Values.resources | nindent 12 }}
+            securityContext:
+              {{- toYaml .Values.securityContext | nindent 12 }}
+
 ---
 apiVersion: v1
 kind: Service
@@ -32,6 +54,7 @@ spec:
   ports:
       - port: {{ .Values.service.port }}
         targetPort: {{ .Values.service.port }}
+
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -39,9 +62,12 @@ metadata:
   name: {{ .Release.Name }}-frontend
   annotations:
     kubernetes.io/ingress.class: traefik
+    {{- if .Values.ingress.annotations }}
+    {{- toYaml .Values.ingress.annotations | nindent 4 }}
+    {{- end }}
 spec:
   rules:
-    - host: "{{ .Values.ingress.host }}"
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
           - path: /
@@ -51,3 +77,7 @@ spec:
                 name: {{ .Release.Name }}-frontend
                 port:
                   number: {{ .Values.service.port }}
+  {{- if .Values.ingress.tls }}
+  tls:
+    {{- toYaml .Values.ingress.tls | nindent 4 }}
+  {{- end }}
