--- a/applications/frontend/templates/hpa.yaml
+++ b/applications/frontend/templates/hpa.yaml
@@ -3,7 +3,11 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ .Release.Name }}-frontend-hpa
-  labels: {{- toYaml .Values.labels | nindent 4 }}
+  labels:
+    app.kubernetes.io/name: frontend
+    app.kubernetes.io/component: frontend
+    app.kubernetes.io/part-of: vyking-app
+    environment: {{ .Values.environment | default "prod" }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -12,18 +16,20 @@ spec:
   minReplicas: {{ .Values.hpa.minReplicas }}
   maxReplicas: {{ .Values.hpa.maxReplicas }}
   metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: {{ .Values.hpa.cpuUtilization }}
-    {{- if .Values.hpa.memoryUtilization }}
-    - type: Resource
-      resource:
-        name: memory
-        target:
-          type: Utilization
-          averageUtilization: {{ .Values.hpa.memoryUtilization }}
-    {{- end }}
+  {{- if .Values.hpa.cpuUtilization }}
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: {{ .Values.hpa.cpuUtilization }}
+  {{- end }}
+  {{- if .Values.hpa.memoryUtilization }}
+  - type: Resource
+    resource:
+      name: memory
+      target:
+        type: Utilization
+        averageUtilization: {{ .Values.hpa.memoryUtilization }}
+  {{- end }}
   {{- end }}
