--- a/applications/frontend/templates/ingress.yaml
+++ b/applications/frontend/templates/ingress.yaml
@@ -4,12 +4,10 @@ metadata:
   name: {{ .Release.Name }}-frontend
   annotations:
     kubernetes.io/ingress.class: traefik
-    cert-manager.io/cluster-issuer: selfsigned-issuer
+    {{- if .Values.ingress.annotations }}
+    {{- toYaml .Values.ingress.annotations | nindent 4 }}
+    {{- end }}
 spec:
-  tls:
-    - hosts:
-        - {{ .Values.ingress.host }}
-      secretName: frontend-tls
   rules:
     - host: {{ .Values.ingress.host }}
       http:
@@ -21,3 +19,7 @@ spec:
                 name: {{ .Release.Name }}-frontend
                 port:
                   number: {{ .Values.service.port }}
+  {{- if .Values.ingress.tls }}
+  tls:
+    {{- toYaml .Values.ingress.tls | nindent 4 }}
+  {{- end }}
