--- a/applications/backend/templates/deployment-service.yaml
+++ b/applications/backend/templates/deployment-service.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-backend
+  name: {{ .Release.Name }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }}-backend
+      app: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}-backend
+        app: {{ .Release.Name }}
     spec:
       containers:
           - name: backend
@@ -58,16 +58,15 @@ spec:
               {{- toYaml .Values.resources | nindent 12 }}
             securityContext:
               {{- toYaml .Values.securityContext | nindent 12 }}
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-backend
+  name: {{ .Release.Name }}
 spec:
   type: {{ .Values.service.type }}
   selector:
-    app: {{ .Release.Name }}-backend
+    app: {{ .Release.Name }}
   ports:
       - port: {{ .Values.service.port }}
         targetPort: {{ .Values.service.port }}
