--- a/applications/backend/values-prod.yaml
+++ b/applications/backend/values-prod.yaml
@@ -1,17 +1,13 @@
 replicaCount: 2
 
 image:
-  repository: vyking-backend
   tag: prod
-  pullPolicy: IfNotPresent
 
 service:
-  type: ClusterIP
   port: 8081
 
 mysql:
   host: mysql-prod
-  port: 3306
   secretName: mysql-prod-secret
 
 resources:
@@ -22,16 +18,8 @@ resources:
     cpu: 500m
     memory: 512Mi
 
-probes:
-  liveness:
-    path: /health
-    initialDelaySeconds: 5
-  readiness:
-    path: /ready
-    initialDelaySeconds: 3
-
-autoscaling:
-  enabled: true
+hpa:
   minReplicas: 2
   maxReplicas: 5
-  targetCPUUtilizationPercentage: 70
+  cpuUtilization: 70
+  memoryUtilization: 70
