--- a/infrastructure/secrets/mysql-dev-secret.yaml
+++ b/infrastructure/secrets/mysql-dev-secret.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: backend-dev
 type: Opaque
 stringData:
-  mysql-root-password: devRootPass123
-  mysql-user: devuser
-  mysql-password: devpass123
-  mysql-database: devdb
+  username: devuser
+  password: devpassword
+  database: devdb
