--- a/infrastructure/secrets/mysql-prod-secret.yaml
+++ b/infrastructure/secrets/mysql-prod-secret.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-prod-secret
-  namespace: backend-dev
+  namespace: backend-prod
 type: Opaque
 stringData:
-  mysql-root-password: prodRootPass123
-  mysql-user: produser
-  mysql-password: prodpass123
-  mysql-database: proddb
+  username: produser
+  password: prodpassword
+  database: proddb
