--- a/applications/backend/templates/deployment-service.yaml
+++ b/applications/backend/templates/deployment-service.yaml
@@ -13,51 +13,52 @@ spec:
         app: {{ .Release.Name }}
     spec:
       containers:
-          - name: backend
-            image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-            imagePullPolicy: {{ .Values.image.pullPolicy }}
-            ports:
-              - containerPort: {{ .Values.service.port }}
-            env:
-              - name: MYSQL_HOST
-                value: "{{ .Values.mysql.host }}"
-              - name: MYSQL_PORT
-                value: "{{ .Values.mysql.port }}"
-              - name: MYSQL_USER
-                valueFrom:
-                  secretKeyRef:
-                    name: {{ .Values.mysql.secretName }}
-                    key: username
-              - name: MYSQL_PASSWORD
-                valueFrom:
-                  secretKeyRef:
-                    name: {{ .Values.mysql.secretName }}
-                    key: password
-              - name: MYSQL_DATABASE
-                valueFrom:
-                  secretKeyRef:
-                    name: {{ .Values.mysql.secretName }}
-                    key: database
-            livenessProbe:
-              httpGet:
-                path: {{ .Values.probes.liveness.path }}
-                port: {{ .Values.service.port }}
-              initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
-              periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
-              timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
-              failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
-            readinessProbe:
-              httpGet:
-                path: {{ .Values.probes.readiness.path }}
-                port: {{ .Values.service.port }}
-              initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }}
-              periodSeconds: {{ .Values.probes.readiness.periodSeconds }}
-              timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }}
-              failureThreshold: {{ .Values.probes.readiness.failureThreshold }}
-            resources:
-              {{- toYaml .Values.resources | nindent 12 }}
-            securityContext:
-              {{- toYaml .Values.securityContext | nindent 12 }}
+        - name: backend
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - containerPort: {{ .Values.service.port }}
+          env:
+            - name: MYSQL_HOST
+              value: "{{ .Values.mysql.host }}"
+            - name: MYSQL_PORT
+              value: "{{ .Values.mysql.port }}"
+            - name: MYSQL_USER
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.mysql.secretName }}
+                  key: username
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.mysql.secretName }}
+                  key: password
+            - name: MYSQL_DATABASE
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.mysql.secretName }}
+                  key: database
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: {{ .Values.service.port }}
+            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
+            periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
+            timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
+            failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: {{ .Values.service.port }}
+            initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }}
+            periodSeconds: {{ .Values.probes.readiness.periodSeconds }}
+            timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }}
+            failureThreshold: {{ .Values.probes.readiness.failureThreshold }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+
 ---
 apiVersion: v1
 kind: Service
@@ -68,5 +69,5 @@ spec:
   selector:
     app: {{ .Release.Name }}
   ports:
-      - port: {{ .Values.service.port }}
-        targetPort: {{ .Values.service.port }}
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
