--- a/applications/backend/templates/deployment-service.yaml
+++ b/applications/backend/templates/deployment-service.yaml
@@ -1,73 +1,26 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ .Release.Name }}
-spec:
-  replicas: {{ .Values.replicaCount }}
-  selector:
-    matchLabels:
-      app: {{ .Release.Name }}
-  template:
-    metadata:
-      labels:
-        app: {{ .Release.Name }}
-    spec:
-      containers:
-        - name: backend
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - containerPort: {{ .Values.service.port }}
-          env:
-            - name: MYSQL_HOST
-              value: "{{ .Values.mysql.host }}"
-            - name: MYSQL_PORT
-              value: "{{ .Values.mysql.port }}"
-            - name: MYSQL_USER
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.mysql.secretName }}
-                  key: username
-            - name: MYSQL_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.mysql.secretName }}
-                  key: password
-            - name: MYSQL_DATABASE
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.mysql.secretName }}
-                  key: database
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: {{ .Values.service.port }}
-            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
-            periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
-            timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
-            failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: {{ .Values.service.port }}
-            initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }}
-            periodSeconds: {{ .Values.probes.readiness.periodSeconds }}
-            timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }}
-            failureThreshold: {{ .Values.probes.readiness.failureThreshold }}
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ .Release.Name }}
-spec:
-  type: {{ .Values.service.type }}
-  selector:
-    app: {{ .Release.Name }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+env:
+  - name: MYSQL_HOST
+    valueFrom:
+      secretKeyRef:
+        name: mysql-credentials-{{ .Values.env }}
+        key: host
+  - name: MYSQL_PORT
+    valueFrom:
+      secretKeyRef:
+        name: mysql-credentials-{{ .Values.env }}
+        key: port
+  - name: MYSQL_USER
+    valueFrom:
+      secretKeyRef:
+        name: mysql-credentials-{{ .Values.env }}
+        key: username
+  - name: MYSQL_PASSWORD
+    valueFrom:
+      secretKeyRef:
+        name: mysql-credentials-{{ .Values.env }}
+        key: password
+  - name: MYSQL_DATABASE
+    valueFrom:
+      secretKeyRef:
+        name: mysql-credentials-{{ .Values.env }}
+        key: database
