--- a/applications/frontend/values-prod.yaml
+++ b/applications/frontend/values-prod.yaml
@@ -16,10 +16,13 @@ backend:
 ingress:
   enabled: true
   host: frontend-prod.local
-  tls: true
   annotations:
     kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: "selfsigned-issuer"
+  tls:
+    - hosts:
+        - frontend-dev.local
+      secretName: frontend-dev-tls
 
 resources:
   requests:
