--- a/applications/frontend/templates/hpa.yaml
+++ b/applications/frontend/templates/hpa.yaml
@@ -2,7 +2,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ .Release.Name }}-frontend-hpa
+  name: {{ .Release.Name }}-hpa
   labels:
     app.kubernetes.io/name: frontend
     app.kubernetes.io/component: frontend
@@ -12,7 +12,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ .Release.Name }}-frontend
+    name: {{ .Release.Name }}
   minReplicas: {{ .Values.hpa.minReplicas }}
   maxReplicas: {{ .Values.hpa.maxReplicas }}
   metrics:
