--- a/applications/frontend/templates/hpa.yaml
+++ b/applications/frontend/templates/hpa.yaml
@@ -5,14 +5,14 @@ metadata:
   name: {{ .Release.Name }}-hpa
   labels:
     app.kubernetes.io/name: frontend
-    app.kubernetes.io/component: frontend
+    app.kubernetes.io/component:
     app.kubernetes.io/part-of: vyking-app
     environment: {{ .Values.environment | default "prod" }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ .Release.Name }}
+    name: {{ .Release.Name }}-frontend
   minReplicas: {{ .Values.hpa.minReplicas }}
   maxReplicas: {{ .Values.hpa.maxReplicas }}
   metrics:
