--- a/applications/frontend/templates/ingress.yaml
+++ b/applications/frontend/templates/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-inng
+  name: {{ .Release.Name }}-ing
   annotations:
     kubernetes.io/ingress.class: traefik
     {{- if .Values.ingress.annotations }}
