--- a/infrastructure/cert-manager/certificate-dev.yaml
+++ b/infrastructure/cert-manager/certificate-dev.yaml
@@ -1,12 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: frontend-cert
+  name: frontend-cert-dev
   namespace: frontend-dev
 spec:
-  secretName: frontend-tls
-  duration: 2160h # 90d
-  renewBefore: 360h # 15d
+  secretName: frontend-dev-tls
+  duration: 2160h
+  renewBefore: 360h
   issuerRef:
     name: selfsigned-issuer
     kind: ClusterIssuer
