--- a/applications/frontend/templates/ingress.yaml
+++ b/applications/frontend/templates/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-ing
+  name: {{ .Release.Name }}-frontend
   annotations:
     kubernetes.io/ingress.class: traefik
     {{- if .Values.ingress.annotations }}
@@ -16,7 +16,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ .Release.Name }}-ing
+                name: {{ .Release.Name }}-frontend
                 port:
                   number: {{ .Values.service.port }}
   {{- if .Values.ingress.tls }}
