--- a/applications/backend/templates/deployment-service.yaml
+++ b/applications/backend/templates/deployment-service.yaml
@@ -2,16 +2,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-deploy
+  name: {{ .Release.Name }}-backend
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }}-deploy
+      app: {{ .Release.Name }}-backend
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}-deploy
+        app: {{ .Release.Name }}-backend
     spec:
       containers:
           - name: backend
@@ -70,11 +70,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-svc
+  name: {{ .Release.Name }}-backend
 spec:
   type: {{ .Values.service.type }}
   selector:
-    app: {{ .Release.Name }}-svc
+    app: {{ .Release.Name }}-backend
   ports:
       - port: {{ .Values.service.port }}
         targetPort: {{ .Values.service.port }}
