--- a/applications/backend/values-dev.yaml
+++ b/applications/backend/values-dev.yaml
@@ -1,14 +1,16 @@
 replicaCount: 1
 
 image:
+  repository: vyking-backend
   tag: dev
+  pullPolicy: IfNotPresent
 
 service:
+  type: ClusterIP
   port: 8081
 
 mysql:
-  host: mysql-dev
-  secretName: mysql-dev-secret
+  secretName: mysql-credentials-dev   # match sealed secret name
 
 resources:
   requests:
@@ -17,3 +19,13 @@ resources:
   limits:
     cpu: 300m
     memory: 256Mi
+
+probes:
+  liveness:
+    path: /health
+    port: 8081
+    initialDelaySeconds: 5
+  readiness:
+    path: /ready
+    port: 8081
+    initialDelaySeconds: 3
