--- a/applications/backend/values.yaml
+++ b/applications/backend/values.yaml
@@ -33,14 +33,14 @@ securityContext:
 
 probes:
   liveness:
-    path: /health
+    path: /
     port: 8080
     initialDelaySeconds: 10
     periodSeconds: 15
     timeoutSeconds: 2
     failureThreshold: 3
   readiness:
-    path: /ready
+    path: /
     port: 8080
     initialDelaySeconds: 5
     periodSeconds: 10
