--- a/applications/frontend/app/Dockerfile
+++ b/applications/frontend/app/Dockerfile
@@ -2,11 +2,16 @@ ARG BASE_IMAGE=nginx:1.25-alpine
 FROM ${BASE_IMAGE}
 
 # Copy static HTML/JS into Nginx default folder
-COPY html/ /usr/share/nginx/html/
+COPY . /usr/share/nginx/html/
 
-# Add health endpoints
-RUN echo "OK" > /usr/share/nginx/html/health \
- && echo "READY" > /usr/share/nginx/html/ready
+# Create dedicated health check endpoints
+RUN mkdir -p /usr/share/nginx/html/health && \
+    echo "OK" > /usr/share/nginx/html/health/liveness && \
+    echo "READY" > /usr/share/nginx/html/health/readiness
+
+# Use non-root user
+RUN chown -R nginx:nginx /usr/share/nginx/html
 
 EXPOSE 8080
+
 CMD ["nginx", "-g", "daemon off;"]
