--- a/applications/backend/app/Dockerfile
+++ b/applications/backend/app/Dockerfile
@@ -5,12 +5,12 @@ WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
 COPY app.py .
+
 EXPOSE 8081
+
+RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
+USER appuser
+
 CMD ["python", "app.py"]
-
-RUN apt-get update && apt-get install -y mysql-client
-
-
-
-
