--- a/applications/frontend/templates/deployment-service.yaml
+++ b/applications/frontend/templates/deployment-service.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Release.Name }}-frontend
+  labels:
+    app: {{ .Release.Name }}-frontend
+    environment: {{ .Values.environment | default "dev" }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -11,36 +14,37 @@ spec:
     metadata:
       labels:
         app: {{ .Release.Name }}-frontend
+        environment: {{ .Values.environment | default "dev" }}
     spec:
       containers:
-          - name: frontend
-            image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-            imagePullPolicy: {{ .Values.image.pullPolicy }}
-            ports:
-              - containerPort: {{ .Values.service.port }}
-            env:
-              - name: BACKEND_URL
-                value: "http://{{ .Values.backend.host }}:{{ .Values.backend.port }}"
-            livenessProbe:
-              httpGet:
-                path: {{ .Values.probes.liveness.path }}
-                port: {{ .Values.probes.liveness.port | default .Values.service.port }}
-              initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
-              periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
-              timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
-              failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
-            readinessProbe:
-              httpGet:
-                path: {{ .Values.probes.readiness.path }}
-                port: {{ .Values.probes.readiness.port | default .Values.service.port }}
-              initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }}
-              periodSeconds: {{ .Values.probes.readiness.periodSeconds }}
-              timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }}
-              failureThreshold: {{ .Values.probes.readiness.failureThreshold }}
-            resources:
-              {{- toYaml .Values.resources | nindent 12 }}
-            securityContext:
-              {{- toYaml .Values.securityContext | nindent 12 }}
+        - name: frontend
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - containerPort: 8080  # Fixed container port
+          env:
+            - name: BACKEND_URL
+              value: "http://{{ .Values.backend.host }}:{{ .Values.backend.port }}"
+          livenessProbe:
+            httpGet:
+              path: {{ .Values.probes.liveness.path }}
+              port: {{ .Values.probes.liveness.port }}
+            initialDelaySeconds: {{ .Values.probes.liveness.initialDelaySeconds }}
+            periodSeconds: {{ .Values.probes.liveness.periodSeconds }}
+            timeoutSeconds: {{ .Values.probes.liveness.timeoutSeconds }}
+            failureThreshold: {{ .Values.probes.liveness.failureThreshold }}
+          readinessProbe:
+            httpGet:
+              path: {{ .Values.probes.readiness.path }}
+              port: {{ .Values.probes.readiness.port }}
+            initialDelaySeconds: {{ .Values.probes.readiness.initialDelaySeconds }}
+            periodSeconds: {{ .Values.probes.readiness.periodSeconds }}
+            timeoutSeconds: {{ .Values.probes.readiness.timeoutSeconds }}
+            failureThreshold: {{ .Values.probes.readiness.failureThreshold }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
 
 ---
 apiVersion: v1
@@ -53,6 +57,5 @@ spec:
     app: {{ .Release.Name }}-frontend
   ports:
       - port: {{ .Values.service.port }}
-        targetPort: {{ .Values.service.port }}
-
-
+        targetPort: {{ .Values.service.targetPort }}
+        protocol: TCP
