--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,4 +27,64 @@ jobs:
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
           k3d cluster create $CLUSTER_NAME --wait
 
-      - name: Build and import im
+      - name: Build and import images
+        run: |
+          docker build -t $FE_IMAGE ./applications/frontend/app
+          docker build -t $BE_IMAGE ./applications/backend/app
+          k3d image import -c $CLUSTER_NAME $FE_IMAGE $BE_IMAGE
+
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.9.8
+
+      - name: Terraform Init
+        working-directory: terraform
+        run: terraform init -input=false
+
+      - name: Terraform Apply (dev)
+        working-directory: terraform
+        run: |
+          terraform apply -var-file=env/dev.tfvars -target=module.argocd -auto-approve
+          terraform apply -var-file=env/dev.tfvars -target=module.infra -auto-approve
+          terraform apply -var-file=env/dev.tfvars -target=module.applications -auto-approve
+
+  deploy_prod:
+    if: github.ref == 'refs/heads/prod'
+    runs-on: ubuntu-latest
+    environment: prod   # requires approval in Settings → Environments → prod
+    env:
+      ENVIRONMENT: prod
+      CLUSTER_NAME: vyking-prod
+      FE_IMAGE: vyking-frontend:prod
+      BE_IMAGE: vyking-backend:prod
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install k3d & kubectl
+        run: |
+          curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+          curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+          k3d cluster create $CLUSTER_NAME --wait
+
+      - name: Build and import images
+        run: |
+          docker build -t $FE_IMAGE ./applications/frontend/app
+          docker build -t $BE_IMAGE ./applications/backend/app
+          k3d image import -c $CLUSTER_NAME $FE_IMAGE $BE_IMAGE
+
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.9.8
+
+      - name: Terraform Init
+        working-directory: terraform
+        run: terraform init -input=false
+
+      - name: Terraform Apply (prod)
+        working-directory: terraform
+        run: |
+          terraform apply -var-file=env/prod.tfvars -target=module.argocd -auto-approve
+          terraform apply -var-file=env/prod.tfvars -target=module.infra -auto-approve
+          terraform apply -var-file=env/prod.tfvars -target=module.applications -auto-approve
