--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,7 +27,11 @@ jobs:
           sudo apt-get install -y kubectl
           k3d cluster create $CLUSTER_NAME --wait
 
-
+      - name: Write kubeconfig for Terraform
+        run: |
+          mkdir -p ~/.kube
+          k3d kubeconfig get $CLUSTER_NAME > ~/.kube/$CLUSTER_NAME-config
+          cp ~/.kube/$CLUSTER_NAME-config ~/.kube/vyking-dev-config
 
       - name: Build and import images
         run: |
@@ -62,7 +66,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        
+      - name: Install k3d & kubectl
+        run: |
+          curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+          sudo apt-get update && sudo apt-get install -y kubectl
+          k3d cluster create $CLUSTER_NAME --wait
 
+      - name: Write kubeconfig for Terraform
+        run: |
+          mkdir -p ~/.kube
+          k3d kubeconfig get $CLUSTER_NAME > ~/.kube/$CLUSTER_NAME-config
+          cp ~/.kube/$CLUSTER_NAME-config ~/.kube/vyking-dev-config
       - name: Build and import images
         run: |
           docker build -t $FE_IMAGE ./applications/frontend/app
