--- a/applications/frontend/app/Dockerfile
+++ b/applications/frontend/app/Dockerfile
@@ -9,9 +9,11 @@ RUN mkdir -p /usr/share/nginx/html/health && \
     echo "OK" > /usr/share/nginx/html/health/liveness && \
     echo "READY" > /usr/share/nginx/html/health/readiness
 
+COPY index.html /usr/share/nginx/html/
+RUN mkdir -p /var/cache/nginx && chmod -R 777 /var/cache/nginx
+
 # Use non-root user
 RUN chown -R nginx:nginx /usr/share/nginx/html
-
 EXPOSE 8080
 
 CMD ["nginx", "-g", "daemon off;"]
