--- a/applications/backend/environments/values-dev.yaml
+++ b/applications/backend/environments/values-dev.yaml
@@ -25,6 +25,6 @@ probes:
     port: 8081
     initialDelaySeconds: 5
   readiness:
-    path: /health
+    path: /readiness
     port: 8081
-    initialDelaySeconds: 3
+    initialDelaySeconds: 10
